# trail-condition-search

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  リファクタリング完了レポート.md  仕様書.md  設定ファイル構成提案.md  設計思想・目的・使用法.md
.devcontainer/: devcontainer.json
api/: serializers.py  urls.py  views.py
app/: config.py  database.py  main.py  seed.py
app/models/: danger.py
config/: settings.py  urls.py
documents/: 260104-ハッシュベース重複検出実装と進捗レポート.md  pytest使い方ガイド.md
help/: django_tutorial.md  docker_command.md
trail_status/: admin.py  apps.py  signals.py  views.py
trail_status/management/commands/: scrape_trail_conditions.py  test_db_sync.py  test_llm.py  trail_sync.py
trail_status/migrations/: 0001_initial.py  0002_trailcondition_comment_trailcondition_reference_url_and_more.py  0003_alter_datasource_url1_alter_datasource_url2_and_more.py  0004_alter_datasource_options_llmusage.py  0005_datasource_prompt_key_alter_trailcondition_source.py  0006_alter_datasource_prompt_key.py  0007_trailcondition_ai_config_trailcondition_ai_model_and_more.py  migration_memo.md
trail_status/models/: condition.py  llm_usage.py  mountain.py  prompt_backup.py  source.py  trail.py
trail_status/services/: fetcher.py  llm_client.py  llm_stats.py  pipeline.py  schema.py  synchronizer.py  types.py
trail_status/services/ai_config/: mitake.yaml  okutama.yaml
trail_status/services/prompts/: 001_okutama_vc.yaml  mitake_vc.yaml  okutama_vc.yaml  template.yaml  プロンプト修正案.md
trail_status/services/sample/: deepseek-chat_sample.json  deepseek-reasoner_mitake_1.json  deepseek-reasoner_sample.json  deepseek-reasoner_sample_0.json  gemini-2.0-flash_sample.json  gemini-2.5-flash_sample.json  (+6 more)
trail_status/tests/: conftest.py  sample_deepseek.py  sample_llm_client.py  sample_schema.py  test_config_files.py  test_fetcher.py  test_llm_clients.py  test_llm_config.py  test_schema_validation.py
